/*
 * $Id: ChangeLog,v 1.2845 2004/04/28 18:16:51 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-28 15:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    * Moved HB_EXPORT qualifier infront of pointer type (really we should always use HB_EXPORT as *first* token)

  * source/vm/codebloc.c
  * source/vm/fastitem.c
    + Added commented-out debugging TraceLog().

  * source/vm/memvars.c
    ! Fixed hb_memvarsRelease() to avoid double releasing.

  * tests/pp_harb.ch
    ! Fixed to support recent changes to Symbol structure.

2004-04-28 20:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/linux/gcc.cf
    + fPIC added for some platforms - disabled by default

  * xharbour/include/hbdefs.h
    + some modification for 64bit platforms

  * xharbour/include/hbstack.h
    + proper casting for stack macros on 64bit platform

  * xharbour/include/hbvmpub.h
    * added
       union {
          PHB_FUNC pFunPtr;
          int iStaticsBase;
       } value
      to HB_SYMB structure to remove pointer/int conversion
      the modification synchronized with Harbour and Ryszard Glab's
      changes.

  * xharbour/include/hbcomprs.h
  * xharbour/include/hbnxs.h
    * changed to use xHarbour types

  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/source/compiler/genc.c
  * xharbour/source/rdd/delim1.c
  * xharbour/source/rdd/sdf1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    * changed to use new HB_SYMB structure

  * xharbour/source/rdd/dbcmd.c
    * changed to use new HB_SYMB structure
    * hb_rddFieldGet()/hb_rddFieldPut() returns error code from low level RDD
      The side effect of this could be double error reporting in some RDD
      but it seems better then silent error ignoring
